Comments from Suchita, typos
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@459 4525493e-7705-40b1-a816-d608a930855b

--- a/PhysicsDarkUniverse/tex/EWSpecificModels.tex
+++ b/PhysicsDarkUniverse/tex/EWSpecificModels.tex
@@ -1,6 +1,6 @@
 %%Introduction
 
-In this Section, we consider specific models with a photon, a W boson, a Z boson or a Higgs boson in the final state (\textit{V+\MET} signature), accompanied by Dark Matter particles that either couple directly to the boson or are mediated by a new particle. The common feature of those models is that they provide different kinematic distributions with respect to the models described in Section~\ref{subsec:MonojetLikeModels}.
+In this Section, we consider specific models with a photon, a W boson, a Z boson or a Higgs boson in the final state (\textit{V+\MET} signature), accompanied by DM particles that either couple directly to the boson or are mediated by a new particle. The common feature of those models is that they provide different kinematic distributions with respect to the models described in Section~\ref{subsec:MonojetLikeModels}.
 
 %%%Classification of models
 
@@ -33,22 +33,22 @@ The models considered in this Section can be divided into two categories:
 \begin{description}
 	\item[V-specific simplified models] These models postulate direct couplings of new mediators
 	to bosons, e.g. they couple the Higgs boson to a new vector or to a new scalar~\cite{Carpenter:2013xra,Berlin:2014cfa}. 
-	\item[Models involving a SM singlet operator including a boson pair that couples to Dark Matter through a contact interaction]
+	\item[Models involving a SM singlet operator including a boson pair that couples to DM through a contact interaction]
 	Shown on the right-hand side of Figure~\ref{fig:VPlusMET_EFT},
-	these models allow for a contact interaction vertex \\that directly couples the boson to Dark Matter~\cite{Cotta:2012nj, Carpenter:2012rg, Crivellin:2015wva,Berlin:2014cfa}.
-	These models are included in this report devoted to simplified models since 
+	these models allow for a contact interaction vertex that directly couples the boson to DM~\cite{Cotta:2012nj, Carpenter:2012rg, Crivellin:2015wva,Berlin:2014cfa}.
+	The models of this type included in this report are devoted to simplified models since 
 	UV completions for most of these operators proceed through loops and are not available to date. 
 	These models provide a benchmark to motivate signal regions that are unique to searches with
 	EW final states and would otherwise not be studied. However, we recommend to use these models
 	as placeholders and emphasize model-independent results especially in signal regions tailored to these models. 
 	Wherever results are interpreted in terms of these operators, a truncation procedure
-	to ensure the validity of the EFT should be employed, as detailed in the next Section (Sec. ~\ref{sec:EFTValidity}). 
+	to ensure the validity of the EFT should be employed, as detailed in Section ~\ref{sec:EFTValidity}. 
 \end{description}
 
 
 The following Sections describe the models within these categories,
-the parameters for each of the benchmark models chosen,
-the studies towards the choices of the parameters to be scanned.
+the chosen parameters for each of the benchmark models
+and the studies towards the choices of the parameters to be scanned.
 
 \subsection{Specific simplified models including EW bosons, tailored to Higgs+MET searches}
 \label{sec:monoHiggs}
