--- a/PhysicsDarkUniverse/tex/EWSpecificModels_MonoHiggs.tex
+++ b/PhysicsDarkUniverse/tex/EWSpecificModels_MonoHiggs.tex
@@ -157,8 +157,8 @@ and DM mass of 1~\tev for all models.
 		\label{fig:METSimpMonoHiggs}}
 \end{figure}
 
-Predictions for this class of models have been so far considered at LO+PS, even though they could be extended to NLO+PS in the near future. The studies in this Section
-have been performed using a model within \madgraph v2.2.3, interfaced to \pythia 8 for the parton shower.  
+Predictions for this class of models have been so far considered at LO+ Parton Shower (PS)\textcolor{red}{check this}, even though they could be extended to NLO+PS in the near future. The studies in this Section
+have been performed using a model within \madgraph v2.2.3, interfaced to \pythia 8 \textcolor{red}{any chance of getting exact pythia version?} for the parton shower.  
 The implementation details for these models are discussed in Section~\ref{sec:monoHImplementation}.
 
 \subsubsection{\MET+Higgs from a baryonic \Zprime}
@@ -203,7 +203,7 @@ Baryonic Higgs vacuum expectation value.
 %the field strengths of $Z$ and $Z'$: this is a free parameter, that is set to be small
 %in the model considered for mono-Higgs signatures. 
 
-In its most general form, this model can contribute to mono-Z signals due to the \Zprime mixing with the Z or photon. Note that EWSB and $ U(1)_B $ breaking do not lead to this mixing at tree-level. Instead, kinetic mixing occurs between the $ U(1)_Y $ and $ U(1)_B $ gauge bosons due to the gauge invariant term $ F^{\mu\nu}_Y F_{B\mu\nu} $. This mixing is a free parameter which we assume to be small in order to focus on the mono-Higgs signature. Mixing may also occur due to radiative corrections, however this is model dependent so we choose to ignore this here.
+In its most general form, this model can contribute to mono-Z signals due to the \Zprime mixing with the Z or photon. Note that EWSB and $ U(1)_B $ breaking do not lead to this mixing at tree-level. Instead, kinetic mixing occurs between the $ U(1)_Y $ and $ U(1)_B $ gauge bosons due to the gauge invariant term $ F^{\mu\nu}_Y F_{B\mu\nu} $. This mixing is a free parameter which we assume to be small in order to focus on the mono-Higgs signature. Mixing may also occur due to radiative corrections, however we choose to ignore this here as it is model dependent.
 
 The predictions of the model depend upon the two additional
 parameters beyond an \schannel simplified model, namely the
@@ -245,7 +245,7 @@ obtained through rescaling by the appropriate cross sections.
 Figs~\ref{fig:VectorHbb_100} and ~\ref{fig:VectorHbb_1000} show the kinematic distributions for the two leading jets
 in the $H \to \bar b b$ decay channel, for two values of the mediator mass and varying the DM mass.  
 
-Analyses should perform further studies, beyond those studies performed for the forum, 
+Experimentalists should perform further studies, beyond those studies performed for the forum, 
 to estimate the reach of the analysis with respect to all points in the grid and therefore decide 
 on a smaller set of grid points to be generated.
 
@@ -254,7 +254,7 @@ on a smaller set of grid points to be generated.
 	\includegraphics[width=0.65\linewidth]{figures/EW/monoH/z_gdm_MET_et_Log}\\
 	\includegraphics[width=0.65\linewidth]{figures/EW/monoH/z_ratio_MET_et_Log}
 	\caption{Missing transverse momentum distributions at generator level in the vector 
-		mediator scenario for different values of: the mediator-dark matter coupling \gDM (left),
+		mediator scenario for different values of: the mediator-DM coupling \gDM (left),
 		and the coupling between the mediator and the SM-like Higgs boson, scaled by the mediator mass, 
 		$g_{h \Zprime \Zprime}/m_{\Zprime}$ (right).
 		\label{fig:metVectorCoupling}}
@@ -265,7 +265,7 @@ on a smaller set of grid points to be generated.
 	\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zprime_100_MET_et_Log}\\
 	\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zprime_1000_MET_et_Log}
 	\caption{Missing transverse momentum distributions at generator level in the vector 
-		mediator scenario: for different values of the dark matter mass \mDM 
+		mediator scenario: for different values of the DM mass \mDM 
 		and a mediator mass of \mmed = 100~\gev (left) and \mmed = 1~\tev (right).
 		\label{fig:metVectorMass} }
 \end{figure}
@@ -360,7 +360,7 @@ The model is described by five parameters:
 	\item the mixing angle between heavy scalar and SM-like Higgs boson, $\sin\theta$;
 	\item the new physics coupling, $b$;
 	\item mass of heavy scalar, $m_{S}$, also termed \mmed;
-	\item mass of dark matter. \mDM;
+	\item mass of DM. \mDM;
 \end{enumerate}
 
 The mixing angle is constrained from current Higgs data
@@ -373,13 +373,13 @@ for the parameter scan in this model: we recommend to set $\sin\theta = 0.3$.
 		\includegraphics[width=0.75\linewidth]{figures/EW/monoH/s_gdm_MET_et_Log}
 		\caption{Missing transverse momentum distributions at generator level in the scalar 
 			mediator scenario, for different values of: the new physics coupling $g_b$ (left),
-			and the mediator-dark matter coupling \gDM (right).
+			and the mediator-DM coupling \gDM (right).
 			\label{fig:metScalarCoupling}}
 	\end{center}
 \end{figure}
 
 Figure~\ref{fig:metScalarCoupling2} shows that
-there is no dependence of the kinematics from the value of this angle, and different values can be obtained via rescaling
+the kinematics does not depend on the value of this angle, and results for different values can be obtained via rescaling
 the results for this mixing angle according to the relevant cross-section. It can also be observed from Figures~\ref{fig:metScalarMass} and~\ref{fig:metScalarCoupling} 
 that the kinematics of this model follows that of the equivalent jet+\MET model: only small changes are observed
 in the on-shell region, while the relevant distributions diverge when the mediator is off-shell. 
@@ -405,7 +405,7 @@ rescaling of the results for these parameters.
 		\includegraphics[width=0.75\linewidth]{figures/EW/monoH/scalar_100_MET_et_Log}\\
 		\includegraphics[width=0.75\linewidth]{figures/EW/monoH/scalar_1000_MET_et_Log}
 		\caption{Missing transverse momentum distributions at generator level in the scalar 
-			mediator scenario: for different values of the dark matter mass \mDM 
+			mediator scenario: for different values of the DM mass \mDM 
 			and a mediator mass of $\mMed = 100~\gev$ (left) and $\mMed = 1~\tev$ (right).
 			\label{fig:metScalarMass}}
 	\end{center}
@@ -460,7 +460,7 @@ $A^0$ in the 2HDM framework, which in turn decays to a DM pair. This model is
 represented in the diagram in Fig. \ref{fig:feyn_prod_monoH} (b).
 
 
-The motivation for coupling the dark matter to the pseudoscalar is that dark matter coupling to a Higgs or \Zprime boson is generically 
+The motivation for coupling the DM to the pseudoscalar is that DM coupling to a Higgs or \Zprime boson is generically 
 constrained by other signal channels and direct detection.
 A reason to consider this model
 is that it has different kinematics  due to the on-shell \Zprime production, 
@@ -468,7 +468,7 @@ where for heavy \Zprime masses the \MET and $p_T$ spectra are much harder.
 This model can satisfy electroweak precision tests and constraints from dijet resonance searches, 
 and still give a potentially observable Higgs+\MET signal.
  
- This model comprises two doublets, where $\Phi_u$ couples to up-type quarks and $\Phi_d$ couples to down-type
+The model comprises of two doublets, where $\Phi_u$ couples to up-type quarks and $\Phi_d$ couples to down-type
  quarks and leptons:
 
  \begin{equation}
@@ -493,7 +493,7 @@ and still give a potentially observable Higgs+\MET signal.
  In this framework, $\tan{\beta} \equiv v_u/v_d$, and $\alpha$ is the mixing angle that diagonalizes 
  the $h - H$ mass squared matrix. This model also contains an additional scalar singlet $\phi$
  that leads to spontaneous symmetry breaking. 
-We take $\alpha = \beta - \pi/2$, in the 
+We take $\alpha = \beta - \pi/2$, in the alignment 
 limit where $h$ has SM-like couplings to fermions and 
 gauge bosons as per Ref.~\cite{Craig:2013hca}, and $\tan{\beta} \ge 0.3$ 
 as implied from the perturbativity of the top Yukawa coupling. 
@@ -514,7 +514,7 @@ to leading order in $\epsilon$ (Eq.~\ref{eq:epsilon}) is
 \begin{equation}
 \Gamma_{\Zprime \to h A^0} =  (g_z \sin \beta \cos \beta)^2 \frac{|p|}{24 \pi} \frac{|p|^2}{M_{\Zprime}^2}.
 \end{equation}
-where the center of mass momentum for the decay products\\
+where the center of mass momentum for the decay products
 $\displaystyle |p| = \frac{1}{2 M_{\Zprime}} \sqrt{ (M_{\Zprime}^2 - (m_h + m_{A^0})^2)
 (M_{\Zprime}^2 - (m_h - m_{A^0})^2)}$.
 The $\Zprime$ can also decay to $Zh$, leading to the same signature if the $Z$ decays invisibly. The partial width for this decay is:
@@ -583,7 +583,7 @@ we recommend to fix $\tan{\beta}$ to unity in the signal generation.
 Similarly, variations of $g_z$ do not lead to any kinematic changes. 
 The value of $g_z$ for a given $M_{\Zprime}$ and $\tan \beta$ can be set according to the maximum value allowed by electroweak global 
 fits and dijet constraints, as described in~\cite{Berlin:2014cfa}. Since this parameter does not influence the kinematics, 
-we leave it up to individual analyses on whether they generate benchmark points only according to these external constraints.
+we leave it up to individual analyses to decide whether they generate benchmark points only according to these external constraints.
 %For \Zprime masses below $\sim 1.3$~\tev and larger $\tan \beta$, the $\rho_0$ constraint on $g_z$ is stronger than 
 %dijet limits, while for $\tan \beta \lesssim 0.75$,
 %the dijet constraints dominate even at low \Zprime masses. 
@@ -610,7 +610,7 @@ as long as $\mDM<M_{A^0}/2$ so that $A^0$ production is on-shell, as shown in Fi
   		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zp2hdm_a0_300_MET_et_Log}
   		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zp2hdm_a0_1000_MET_et_Log}
   		\caption{Missing transverse momentum distributions at generator level in the \Zprime+2HDM 
-  			scenario for different values of the dark matter mass \mDM, with 
+  			scenario for different values of the DM mass \mDM, with 
   			$m_{\Zprime}$ = 1~\tev and $m_{A^0}$ = 300~\gev (left) and $m_{A^0}$ = 1~\tev (right).
   			\label{fig:zprimeDecay}}
   \end{figure}
