Added contributor list
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@461 4525493e-7705-40b1-a816-d608a930855b

--- a/PhysicsDarkUniverse/doc.tex
+++ b/PhysicsDarkUniverse/doc.tex
@@ -3,7 +3,7 @@
 \usepackage{lineno,hyperref}
 \modulolinenumbers[5]
 
-\journal{Journal of \LaTeX\ Templates}
+\journal{Physics of the Dark Universe}
 
 %%%%%%%%%%%%%%%%%%%%%%%
 %% Elsevier bibliography styles
@@ -158,10 +158,11 @@
 \begin{frontmatter}
 
 \title{Dark Matter Benchmark Models for Early LHC Run-2 Searches: Report of the ATLAS/CMS Dark Matter Forum}
-\author{ATLAS+CMS Dark Matter Forum}
+%\author{ATLAS+CMS Dark Matter Forum}
 
+\input{authors.tex}
 %% Group authors per affiliation:
-\author{The authors}
+%\author{The authors}
 %\address{Radarweg 29, Amsterdam}
 %\fntext[myfootnote]{Since 1880.}
 
